--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -77,7 +77,7 @@
             android:id="@+id/homeFrag_tvCards"
             android:layout_width="wrap_content"
             android:layout_height="40sp"
-            android:text="Cards"
+            android:text="@string/cards"
             android:textSize="20sp"
             android:textStyle="bold"
             android:layout_marginStart="30sp"
@@ -92,6 +92,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
+            android:overScrollMode="never"
+            android:scrollbars="none"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/homeFrag_tvCards"
          >
@@ -149,7 +151,34 @@
 
         </HorizontalScrollView>
 
+        <TextView
+            android:id="@+id/homeFrag_tvTransactions"
+            android:layout_width="wrap_content"
+            android:layout_height="40sp"
+            android:layout_marginStart="28dp"
+            android:layout_marginTop="38dp"
+            android:text="Transactions"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/homeFrag_hsvCards">
 
+        </TextView>
+
+        <ListView
+            android:id="@+id/homeFrag_lvTransactions"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:backgroundTint="@color/grey"
+            android:layout_marginStart="20sp"
+            android:layout_marginEnd="20sp"
+            app:layout_constraintTop_toBottomOf="@id/homeFrag_tvTransactions"
+            app:layout_constraintStart_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+          >
+
+        </ListView>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
