--- a/app/src/main/res/drawable/ic_home.xml
+++ b/app/src/main/res/drawable/ic_home.xml
@@ -1,9 +1,9 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="384dp"
-    android:height="384dp"
-    android:viewportWidth="24"
-    android:viewportHeight="24">
+    android:width="32dp"
+    android:height="32dp"
+    android:viewportWidth="32"
+    android:viewportHeight="32">
   <path
       android:fillColor="#FF000000"
-      android:pathData="M12,2.1L1,12L4,12L4,21L11,21L11,15L13,15L13,21L20,21L20,12L23,12L12,2.1zM12,4.791L18,10.191L18,11L18,19L15,19L15,13L9,13L9,19L6,19L6,10.191L12,4.791z"/>
+      android:pathData="M16,2.594L15.281,3.281L2.281,16.281L3.719,17.719L5,16.438L5,28L14,28L14,18L18,18L18,28L27,28L27,16.438L28.281,17.719L29.719,16.281L16.719,3.281ZM16,5.438L25,14.438L25,26L20,26L20,16L12,16L12,26L7,26L7,14.438Z"/>
 </vector>
