--- a/app/src/main/res/layout/fragment_stocks.xml
+++ b/app/src/main/res/layout/fragment_stocks.xml
@@ -4,6 +4,49 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@drawable/blue_gradient"
     tools:context=".StocksFragment">
 
+    <TextView
+        android:id="@+id/stocksFrag_tvName"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="sans-serif"
+        android:text="John Terry"
+        android:textColor="@color/white"
+        android:textSize="25sp"
+        android:textStyle="bold"
+        android:layout_marginTop="80sp"
+        android:layout_marginStart="200sp"
+        app:layout_constraintEnd_toStartOf="@+id/stocksFrag_ivUser"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/stocksFrag_ivUser"
+        android:layout_width="50sp"
+        android:layout_height="55dp"
+        android:layout_marginTop="70sp"
+        android:layout_marginEnd="20sp"
+        android:src="@drawable/ic_profilepicture"
+        app:tint="@color/white"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toEndOf="@id/stocksFrag_tvName"
+        />
+
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/stocksFrag_clStocks"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@drawable/roundbackground_layout"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="150sp">
+
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
