--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -17,18 +18,20 @@
         android:textColor="@color/white"
         android:textSize="25sp"
         android:textStyle="bold"
-        android:layout_marginTop="70dp"
+        android:layout_marginTop="80dp"
         android:layout_marginStart="200sp"
-        app:layout_constraintEnd_toStartOf="@+id/imageView"
+        app:layout_constraintEnd_toStartOf="@+id/homeFrag_ivUser"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="49dp"
+        android:id="@+id/homeFrag_ivUser"
+        android:layout_width="50sp"
         android:layout_height="55dp"
-        android:layout_marginTop="60dp"
+        android:layout_marginTop="70dp"
+        android:layout_marginEnd="20sp"
         android:src="@drawable/ic_profilepicture"
+        app:tint="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toEndOf="@id/homeFrag_tvName"
@@ -70,7 +73,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="275sp"
+        android:layout_marginTop="268sp"
         >
 
         <TextView
@@ -156,7 +159,7 @@
             android:layout_width="wrap_content"
             android:layout_height="40sp"
             android:layout_marginStart="28dp"
-            android:layout_marginTop="38dp"
+            android:layout_marginTop="25dp"
             android:text="Transactions"
             android:textSize="20sp"
             android:textStyle="bold"
@@ -168,17 +171,22 @@
         <ListView
             android:id="@+id/homeFrag_lvTransactions"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="0sp"
             android:backgroundTint="@color/grey"
             android:layout_marginStart="20sp"
             android:layout_marginEnd="20sp"
             app:layout_constraintTop_toBottomOf="@id/homeFrag_tvTransactions"
-            app:layout_constraintStart_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:divider="@color/white"
+            android:dividerHeight="7sp"
+            android:scrollbars="none"
+            android:overScrollMode="never"
           >
 
         </ListView>
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
