--- a/app/src/main/res/layout/fragment_statistics.xml
+++ b/app/src/main/res/layout/fragment_statistics.xml
@@ -62,6 +62,24 @@
 
         </com.androidplot.pie.PieChart>
 
+        <ListView
+            android:id="@+id/statFrag_lvTransactions"
+            android:layout_width="match_parent"
+            android:layout_height="0sp"
+            android:backgroundTint="@color/grey"
+            android:layout_marginStart="20sp"
+            android:layout_marginEnd="20sp"
+            android:layout_marginTop="15sp"
+            app:layout_constraintTop_toBottomOf="@id/statFrag_pcTransactions"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:listSelector="@android:color/transparent"
+            android:divider="@color/white"
+            android:dividerHeight="7sp"
+            android:scrollbars="none"
+            android:overScrollMode="never" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
