--- a/app/src/main/res/layout/lv_row_item.xml
+++ b/app/src/main/res/layout/lv_row_item.xml
@@ -3,7 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@drawable/roundbackground_listview">
+    android:background="@drawable/roundbackground_listview"
+    >
 
     <TextView
         android:id="@+id/lvTransactions_merchant"
