--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,5 +8,5 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="primary_color">#00008B</color>
-    <color name="grey">#F2F2F2</color>
+    <color name="grey">#FCFCFC</color>
 </resources>
