--- a/app/src/main/res/layout/fragment_transfer.xml
+++ b/app/src/main/res/layout/fragment_transfer.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@drawable/blue_gradient"
     tools:context=".TransferFragment">
 
@@ -12,13 +12,13 @@
         android:id="@+id/transferFrag_tvName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="200sp"
+        android:layout_marginTop="80dp"
         android:fontFamily="sans-serif"
         android:text="John Terry"
         android:textColor="@color/white"
         android:textSize="25sp"
         android:textStyle="bold"
-        android:layout_marginTop="80dp"
-        android:layout_marginStart="200sp"
         app:layout_constraintEnd_toStartOf="@+id/transferFrag_ivUser"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -30,25 +30,91 @@
         android:layout_marginTop="70dp"
         android:layout_marginEnd="20sp"
         android:src="@drawable/ic_profilepicture"
-        app:tint="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toEndOf="@id/transferFrag_tvName"
-        />
+        app:layout_constraintTop_toTopOf="parent"
+        app:tint="@color/white" />
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/transferFrag_clTransfer"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginTop="150sp"
         android:background="@drawable/roundbackground_layout"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="150sp">
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <RelativeLayout
+            android:id="@+id/transferFrag_rlPay"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="50sp"
+            android:layout_marginTop="50sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <ImageButton
+                android:id="@+id/transferFrag_ibPay"
+                android:layout_width="100sp"
+                android:layout_height="100sp"
+                android:layout_centerHorizontal="true"
+                android:background="@drawable/ic_pay"
+                android:clickable="true" />
+
+            <TextView
+                android:id="@+id/transferFrag_tvPay"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/transferFrag_ibPay"
+                android:layout_centerHorizontal="true"
+                android:text="Pay"
+                android:textSize="17sp"
+                android:textStyle="bold" />
+        </RelativeLayout>
 
 
+        <RelativeLayout
+            android:id="@+id/transferFrag_rlTransfer"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/transferFrag_rlPay"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <ImageButton
+                android:id="@+id/transferFrag_ibTransfer"
+                android:layout_width="100sp"
+                android:layout_height="100sp"
+                android:layout_marginTop="50sp"
+                android:background="@drawable/ic_transfer" />
+
+            <TextView
+                android:id="@+id/transferFrag_tvTransfer"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/transferFrag_ibTransfer"
+                android:layout_centerHorizontal="true"
+                android:text="@string/transfer"
+                android:textSize="17sp"
+                android:textStyle="bold" />
+        </RelativeLayout>
+
+
+        <ListView
+            android:id="@+id/transferFrag_lvTransfers"
+            android:layout_width="match_parent"
+            android:layout_height="0sp"
+            android:layout_marginTop="20sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/transferFrag_rlPay"
+            android:overScrollMode="never"
+            android:listSelector="@android:color/transparent">
+        </ListView>
     </androidx.constraintlayout.widget.ConstraintLayout>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
