--- a/app/src/main/res/drawable/ic_bank.xml
+++ b/app/src/main/res/drawable/ic_bank.xml
@@ -1,13 +1,23 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="350dp"
-    android:height="350dp"
-    android:viewportWidth="350"
-    android:viewportHeight="350">
-  <path
-      android:pathData="m287.14,158.2l0,-17.62l14.98,0l0,-32.97l-126.45,-47.67l-126.45,47.67l0,32.97l14.98,0l0,17.62l13.54,0l0,86.81l-13.54,0l0,17.62l-14.98,0l0,33.16l252.9,0l0,-33.16l-14.98,0l0,-17.62l-13.54,0l0,-86.81l13.54,0zM278.71,149.77l-43.09,0l0,-9.19l43.09,0l0,9.19zM227.19,245l0,17.62l-21.54,0l0,-17.62l-13.54,0l0,-86.81l13.54,0l0,-17.62l21.54,0l0,17.62l13.54,0l0,86.81l-13.54,0zM124.16,158.2l0,-17.62l21.54,0l0,17.62l13.54,0l0,86.81l-13.54,0l0,17.62l-21.54,0l0,-17.62l-13.54,0l0,-86.81l13.54,0zM167.67,245l0,-86.81l16.02,0l0,86.81l-16.02,0zM154.13,149.77l0,-9.19l43.09,0l0,9.19l-43.09,0zM154.13,253.43l43.09,0l0,9.19l-43.09,0l0,-9.19zM57.66,113.44l118.02,-44.5l118.02,44.5l0,18.71l-236.04,0l0,-18.71zM72.64,140.58l43.09,0l0,9.19l-43.09,0l0,-9.19zM86.18,158.2l16.02,0l0,86.81l-16.02,0l0,-86.81zM72.64,253.43l43.09,0l0,9.19l-43.09,0l0,-9.19zM293.7,287.35l-236.04,0l0,-16.3l236.04,0l0,16.3zM278.71,262.62l-43.09,0l0,-9.19l43.09,0l0,9.19zM265.17,245l-16.02,0l0,-86.81l16.01,0l0,86.81l0,0z"
-      android:strokeLineJoin="miter"
-      android:strokeWidth="0"
-      android:fillColor="#000000"
-      android:strokeColor="#00000000"
-      android:strokeLineCap="butt"/>
+<vector android:height="32dp" android:viewportHeight="500"
+    android:viewportWidth="500" android:width="32dp" xmlns:android="http://schemas.android.com/apk/res/android">
+    <path android:fillColor="#00000000"
+        android:pathData="m249,18.5l-227.5,122.5l0,52.5l455,0l0,-52.5l-227.5,-122.5z"
+        android:strokeColor="#000" android:strokeLineCap="round"
+        android:strokeLineJoin="round" android:strokeWidth="30"/>
+    <path android:fillColor="#00000000"
+        android:pathData="m476.5,473.5l-455,0l35,-70l385,0l35,70z"
+        android:strokeColor="#000" android:strokeLineCap="round"
+        android:strokeLineJoin="round" android:strokeWidth="30"/>
+    <path android:fillColor="#00000000"
+        android:pathData="m91.5,193.5l0,210" android:strokeColor="#000"
+        android:strokeLineCap="round" android:strokeLineJoin="round" android:strokeWidth="30"/>
+    <path android:fillColor="#00000000"
+        android:pathData="m196.5,193.5l0,210" android:strokeColor="#000"
+        android:strokeLineCap="round" android:strokeLineJoin="round" android:strokeWidth="30"/>
+    <path android:fillColor="#00000000"
+        android:pathData="m301.5,193.5l0,210" android:strokeColor="#000"
+        android:strokeLineCap="round" android:strokeLineJoin="round" android:strokeWidth="30"/>
+    <path android:fillColor="#00000000"
+        android:pathData="m406.5,193.5l0,210" android:strokeColor="#000"
+        android:strokeLineCap="round" android:strokeLineJoin="round" android:strokeWidth="30"/>
 </vector>
