--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -28,9 +28,10 @@
         android:id="@+id/homeFrag_ivUser"
         android:layout_width="50sp"
         android:layout_height="55dp"
+        android:layout_marginStart="5sp"
         android:layout_marginTop="70dp"
-        android:layout_marginEnd="20sp"
-        android:src="@drawable/ic_profilepicture"
+        android:layout_marginEnd="25sp"
+        android:src="@drawable/ic_profile_picture_round"
         app:tint="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -102,6 +103,7 @@
          >
 
             <LinearLayout
+                android:id="@+id/homeFrag_llCards"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:divider="@drawable/divider_card"
@@ -154,40 +156,55 @@
 
         </HorizontalScrollView>
 
-        <TextView
-            android:id="@+id/homeFrag_tvTransactions"
-            android:layout_width="wrap_content"
-            android:layout_height="40sp"
-            android:layout_marginStart="28dp"
-            android:layout_marginTop="25dp"
-            android:text="Transactions"
-            android:textSize="20sp"
-            android:textStyle="bold"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/homeFrag_hsvCards">
-
-        </TextView>
-
-        <ListView
-            android:id="@+id/homeFrag_lvTransactions"
+        <Button
+            android:id="@+id/homeFrag_btAddCard"
             android:layout_width="match_parent"
-            android:layout_height="0sp"
-            android:backgroundTint="@color/grey"
-            android:layout_marginStart="20sp"
-            android:layout_marginEnd="20sp"
-            app:layout_constraintTop_toBottomOf="@id/homeFrag_tvTransactions"
-            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_height="55sp"
+            android:text="Add new card"
+            android:textColor="@color/black"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:listSelector="@android:color/transparent"
-            android:clickable="false"
-            android:divider="@color/white"
-            android:dividerHeight="7sp"
-            android:scrollbars="none"
-            android:overScrollMode="never"
-          >
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/homeFrag_hsvCards"
+            android:layout_marginTop="27sp"
+            android:layout_marginStart="20sp"
+            android:backgroundTint="@color/btGrey"
+            android:drawableLeft="@drawable/ic_add_card"
+            android:layout_marginEnd="120sp">
+        </Button>
 
-        </ListView>
+        <Button
+            android:id="@+id/homeFrag_btViewTransactions"
+            android:layout_width="match_parent"
+            android:layout_height="55sp"
+            android:text="View Transactions"
+            android:textColor="@color/black"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/homeFrag_btAddCard"
+            android:layout_marginTop="10sp"
+            android:layout_marginStart="20sp"
+            android:backgroundTint="@color/btGrey"
+            android:drawableLeft="@drawable/ic_transactions"
+            android:layout_marginEnd="120sp">
+        </Button>
+
+        <Button
+            android:id="@+id/homeFrag_btViewAccount"
+            android:layout_width="match_parent"
+            android:layout_height="55sp"
+            android:text="View Bank Account"
+            android:textColor="@color/black"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/homeFrag_btViewTransactions"
+            android:layout_marginTop="10sp"
+            android:layout_marginStart="20sp"
+            android:backgroundTint="@color/btGrey"
+            android:drawableLeft="@drawable/ic_bank"
+            android:layout_marginEnd="120sp">
+        </Button>
+
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
