--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -139,7 +139,7 @@
         android:layout_marginTop="30sp"
         android:layout_marginEnd="200sp"
         android:layout_marginBottom="25dp"
-        android:background="@drawable/spinner"
+        android:background="@drawable/background_spinner"
         android:entries="@array/countries_array"
         android:hint = "Click to set date"
         android:gravity="center"
