--- a/app/src/main/res/menu/buttom_nav_menu.xml
+++ b/app/src/main/res/menu/buttom_nav_menu.xml
@@ -2,22 +2,22 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/menu_home"
-        android:title="@string/home"
-        android:icon="@drawable/ic_home"/>
+        android:icon="@drawable/ic_home"
+        android:title="@string/home" />
 
     <item
-        android:id="@+id/menu_statistics"
-        android:title="@string/statistics"
-        android:icon="@drawable/icon_statistics" />
+        android:id="@+id/menu_transactions"
+        android:icon="@drawable/icon_statistics"
+        android:title="@string/transactions" />
 
     <item
         android:id="@+id/menu_transfer"
-        android:title="@string/transfer"
-        android:icon="@drawable/icon_transfer"/>
+        android:icon="@drawable/icon_transfer"
+        android:title="@string/transfer" />
 
     <item
-        android:id="@+id/menu_stocks"
-        android:title="@string/stocks"
-        android:icon="@drawable/icon_stocks" />
+        android:id="@+id/menu_profile"
+        android:icon="@drawable/ic_profile_picture"
+        android:title="@string/profile" />
 
 </menu>
