--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,5 +8,6 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="primary_color">#00008B</color>
-    <color name="grey">#FAFAFA</color>
+    <color name="grey">#F5F5F5</color>
+    <color name="btGrey">#F0F0F0</color>
 </resources>
