--- a/app/src/main/res/layout/fragment_transactions.xml
+++ b/app/src/main/res/layout/fragment_transactions.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@drawable/blue_gradient"
     tools:context=".TransactionsFragment">
 
@@ -12,13 +12,13 @@
         android:id="@+id/transactionsFrag_tvName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="200sp"
+        android:layout_marginTop="80dp"
         android:fontFamily="sans-serif"
         android:text="John Terry"
         android:textColor="@color/white"
         android:textSize="25sp"
         android:textStyle="bold"
-        android:layout_marginTop="80dp"
-        android:layout_marginStart="200sp"
         app:layout_constraintEnd_toStartOf="@+id/transactionsFrag_ivUser"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -27,59 +27,106 @@
         android:id="@+id/transactionsFrag_ivUser"
         android:layout_width="50sp"
         android:layout_height="55dp"
+        android:layout_marginStart="5sp"
         android:layout_marginTop="70dp"
         android:layout_marginEnd="25sp"
-        android:layout_marginStart="5sp"
         android:src="@drawable/ic_profile_picture_round"
-        app:tint="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toEndOf="@id/transactionsFrag_tvName"
-        />
+        app:layout_constraintTop_toTopOf="parent"
+        app:tint="@color/white" />
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/transactionsFrag_cltransactionss"
+        android:id="@+id/transactionsFrag_cltransactions"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginTop="150sp"
         android:background="@drawable/roundbackground_layout"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="150sp">
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
-        <com.androidplot.pie.PieChart
-            android:id="@+id/transactionsFrag_pcTransactions"
-            android:layout_width="wrap_content"
-            android:layout_height="265sp"
-            android:layout_marginTop="25sp"
+        <RelativeLayout
+            android:id="@+id/transactionsFrag_rlPieChart"
+            android:layout_width="match_parent"
+            android:layout_height="0sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:backgroundColor="@color/white"
-            app:borderColor="@color/white"
-          >
+            android:layout_marginTop="25sp">
 
-        </com.androidplot.pie.PieChart>
+            <com.androidplot.pie.PieChart
+                android:id="@+id/transactionsFrag_pcTransactions"
+                android:layout_width="match_parent"
+                android:layout_height="265sp"
+                android:layout_centerInParent="true"
+                android:layout_marginStart="20sp"
+                android:layout_marginEnd="20sp"
+                app:backgroundColor="@color/white"
+                app:borderColor="@color/white"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
+
+            </com.androidplot.pie.PieChart>
+
+            <TextView
+                android:id="@+id/transactionsFrag_tvSum"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="6500.50 RON"
+                android:textStyle="normal"
+                android:layout_centerInParent="true"/>
+        </RelativeLayout>
+
+
+        <LinearLayout
+            android:id="@+id/transactionsFrag_llMonth"
+            android:layout_width="wrap_content"
+            android:layout_height="20sp"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginTop="10sp"
+            android:layout_marginStart="28sp"
+            app:layout_constraintTop_toBottomOf="@id/transactionsFrag_rlPieChart"
+            >
+
+            <TextView
+                android:id="@+id/transactionsFrag_tvMonth"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Month"
+                android:textColor="@color/light_grey"
+                android:textSize="16sp"/>
+
+            <Spinner
+                android:id="@+id/transactionsFrag_spinMonth"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@color/white"
+                android:entries="@array/months"
+                android:textAlignment="center" />
+        </LinearLayout>
+
 
         <ListView
             android:id="@+id/transactionsFrag_lvTransactions"
             android:layout_width="match_parent"
             android:layout_height="0sp"
-            android:backgroundTint="@color/grey"
             android:layout_marginStart="20sp"
+            android:layout_marginTop="5sp"
             android:layout_marginEnd="20sp"
-            android:layout_marginTop="15sp"
-            app:layout_constraintTop_toBottomOf="@id/transactionsFrag_pcTransactions"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:listSelector="@android:color/transparent"
+            android:backgroundTint="@color/grey"
             android:divider="@color/white"
             android:dividerHeight="7sp"
+            android:listSelector="@android:color/transparent"
+            android:overScrollMode="never"
             android:scrollbars="none"
-            android:overScrollMode="never" />
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/transactionsFrag_llMonth" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
