--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="primary_color">#00008B</color>
     <color name="grey">#F5F5F5</color>
     <color name="btGrey">#F0F0F0</color>
+    <color name="light_grey">#7f7f7f</color>
 </resources>
